# proxy-relay

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  session-notes.md
.claude/plans/: manifest.json  per-profile-config-plan.md  plan-a.md  plan-b.md  plan-c.md
docs/: architecture-review-done.md  architecture-review.md  reference.md
docs/diagrams/: proxy-relay-flow.md
proxy_relay/: __init__.py  __main__.py  browse.py  cli.py  config.py  exceptions.py  forwarder.py  handler.py  lang.py  logger.py  monitor.py  pidfile.py  profile_rules.py  response.py  sanitizer.py  server.py  telemetry.py  tunnel.py  tz.py  upstream.py  warmup.py
proxy_relay/capture/: __init__.py  analyzer.py  cdp_client.py  collector.py  models.py  schema.py
research/: traffic-capture-analysis.md
tests/: conftest.py  smoke_test.sh
tests/unit/: test_analyzer.py  test_batch_j_low.py  test_browse.py  test_browse_capture.py  test_capture_models.py  test_capture_schema.py  test_capture_session.py  test_cdp_client.py  test_cli.py  test_cli_capture.py  test_collector.py  test_config.py  test_config_capture.py  test_dns_leak.py  test_exceptions.py  test_forwarder.py  test_handler.py  test_init.py  test_lang.py  test_logger.py  test_monitor.py  test_pidfile.py  test_profile_rules.py  test_sanitizer.py  test_security_pr.py  test_server.py  test_server_async_io.py  test_tunnel.py  test_tz.py  test_upstream.py  test_warmup.py
