[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxy-relay"
version = "0.1.0"
description = "Local HTTP CONNECT proxy relaying traffic through upstream SOCKS5 via proxy-st"
requires-python = ">=3.12"
dependencies = [
    "proxy-st",
    "python-socks[asyncio]>=2.4.0",
    "tomlkit>=0.13.0",
]

[project.optional-dependencies]
capture = [
    "telemetry-monitor",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
proxy-relay = "proxy_relay.cli:main"

[project.entry-points."telemetry_monitor.schema"]
proxy-relay = "proxy_relay.capture.schema:PROXY_RELAY_SCHEMA"

[tool.hatch.build.targets.wheel]
packages = ["proxy_relay"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
